==> abhay9899/MCP2515_ESP-IDF_Lib/src/MCP2515.c <==
#include <stddef.h>
#include <stdlib.h>
#include <stdint.h>
#include <string.h>
#include "driver/gpio.h"
#include "driver/spi_master.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/timers.h"
#include "freertos/event_groups.h"
#include "sdkconfig.h"
#include "esp_event.h"
#include "esp_log.h"
#include "MCP2515.h"
#include "mcp_can_dfs.h"
#include "spi_comp.h"

void mcp2515_reset(void)                                      
{
    esp_err_t ret;
    spi_transaction_t tM = {
    .flags = SPI_TRANS_USE_RXDATA | SPI_TRANS_USE_TXDATA,
    .length = 8,
    .tx_data[0] = MCP_RESET
    };
    ret = spi_device_transmit(spi, &tM); 
    if(ret != ESP_OK) 
    {
        printf("SPI_Device_Transmit Failed!\n");
    }
    vTaskDelay(10 / portTICK_RATE_MS);
}

uint8_t mcp2515_readRegister(const uint8_t address)                                                                     
{
    esp_err_t ret;
    spi_transaction_t tM = {
    .flags = SPI_TRANS_USE_RXDATA | SPI_TRANS_USE_TXDATA,
    .length = 24,
    .tx_data[0] = MCP_READ,
    .tx_data[1] = address,
    .tx_data[2] = 0x00
    };
    ret = spi_device_transmit(spi, &tM); 
    if(ret != ESP_OK) 
    {
        printf("SPI_Device_Transmit Failed!\n");
    }
    return tM.rx_data[2];
}

void mcp2515_readRegisterS(const uint8_t address, uint8_t values[], const uint8_t n)
{
    esp_err_t ret;
    uint8_t rx_data[n + 2];
    uint8_t tx_data[n + 2];

    tx_data[0] = MCP_READ;
    tx_data[1] = address;

    spi_transaction_t tM = {
    .length = ((2 + ((size_t)n)) * 8),
    .rx_buffer = rx_data,
    .tx_buffer = tx_data
    };

    ret = spi_device_transmit(spi, &tM); 
    if(ret != ESP_OK) 
    {
        printf("SPI_Device_Transmit Failed!\n");
    }

    for (uint8_t i = 0; i < n; i++) 
    {
        values[i] = rx_data[i + 2];
    }
}

void mcp2515_modifyRegister(const uint8_t address, const uint8_t mask, const uint8_t data)
{
    esp_err_t ret;
    spi_transaction_t tM = {
    .flags = SPI_TRANS_USE_RXDATA | SPI_TRANS_USE_TXDATA,
    .length = 32,
    .tx_data[0] = MCP_BITMOD,
    .tx_data[1] = address,
    .tx_data[2] = mask,
    .tx_data[3] = data
    };
    ret = spi_device_transmit(spi, &tM); 
    if(ret != ESP_OK) 
    {
        printf("SPI_Device_Transmit Failed!\n");
    }
}

void mcp2515_setRegister(const uint8_t address, const uint8_t value)
{
    esp_err_t ret;
    spi_transaction_t tM = {
    .flags = SPI_TRANS_USE_RXDATA | SPI_TRANS_USE_TXDATA,
    .length = 24,
    .tx_data[0] = MCP_WRITE,
    .tx_data[1] = address,
    .tx_data[2] = value
    };
    ret = spi_device_transmit(spi, &tM); 
    if(ret != ESP_OK) 
    {
        printf("SPI_Device_Transmit Failed!\n");
    }
}

void mcp2515_setRegisterS(const uint8_t address, uint8_t values[], const uint8_t n)
{
    esp_err_t ret;
    uint8_t data[n + 2];
    data[0] = MCP_WRITE;
    data[1] = address;

    for(uint8_t i = 0; i < n; i++) 
    {
        data[i + 2] = values[i];
    }

    spi_transaction_t tM = {
    .length = ((2 + ((size_t)n)) * 8),
    .tx_buffer = data
    };
    ret = spi_device_transmit(spi, &tM); 
    if(ret != ESP_OK) 
    {
        printf("SPI_Device_Transmit Failed!\n");
    }
}

uint8_t mcp2515_readStatus(void)                             
{
    esp_err_t ret;
    spi_transaction_t tM = {
    .flags = SPI_TRANS_USE_RXDATA | SPI_TRANS_USE_TXDATA,
    .length = 16,
    .tx_data[0] = MCP_READ_STATUS,
    .tx_data[1] = 0x00
    };
    ret = spi_device_transmit(spi, &tM); 
    if(ret != ESP_OK) 
    {
        printf("SPI_Device_Transmit Failed!\n");
    }
    return tM.rx_data[1];
}

uint8_t mcp2515_requestNewMode(const uint8_t newmode)
{
	portTickType ticks_start = xTaskGetTickCount();

	// Spam new mode request and wait for the operation  to complete
	while(1)
	{
		// Request new mode
		// This is inside the loop as sometimes requesting the new mode once doesn't work (usually when attempting to sleep)
		mcp2515_modifyRegister(MCP_CANCTRL, MODE_MASK, newmode); 
		uint8_t statReg = mcp2515_readRegister(MCP_CANSTAT);
		if((statReg & MODE_MASK) == newmode) // We're now in the new mode      FF & 0xE0 should be equal to 128 (0x80)
        {
			return MCP2515_OK;
        }
		else if((xTaskGetTickCount() - ticks_start) > 200) // Wait no more than 200ms for the operation to complete
        {
			return MCP2515_FAIL;
        }
	}
}

uint8_t MCP2515_init(const uint8_t canIDMode, const uint8_t canSpeed, const uint8_t canClock)
{
	uint8_t res;
    printf("preparing to reset!\n");
    mcp2515_reset();  
    mcpMode = MCP_LOOPBACK;

    res = mcp2515_setCANCTRL_Mode(MODE_CONFIG);
    if(res > 0)
    {
	#if DEBUG_MODE
    	printf("Entering Configuration Mode Failure...\n"); 
	#endif
      return res;
    }
	#if DEBUG_MODE
    	printf("Entering Configuration Mode Successful!\n");
	#endif

    // Set Baudrate
    if(mcp2515_configRate(canSpeed, canClock))
    {
	#if DEBUG_MODE
    	printf("Setting Baudrate Failure...\n");
	#endif
      return res;
    }
	#if DEBUG_MODE
    	printf("Setting Baudrate Successful!\n");
	#endif

    if (res == MCP2515_OK) 
    {
		/* init canbuffers */
        mcp2515_initCANBuffers();
		/* interrupt mode */
        mcp2515_setRegister(MCP_CANINTE, MCP_RX0IF | MCP_RX1IF);
		//Sets BF pins as GPO
		mcp2515_setRegister(MCP_BFPCTRL,MCP_BxBFS_MASK | MCP_BxBFE_MASK);
		//Sets RTS pins as GPI
		mcp2515_setRegister(MCP_TXRTSCTRL,0x00);

        switch(canIDMode)
        {
            case (MCP_ANY):
            mcp2515_modifyRegister(MCP_RXB0CTRL, MCP_RXB_RX_MASK | MCP_RXB_BUKT_MASK, MCP_RXB_RX_ANY | MCP_RXB_BUKT_MASK);
            mcp2515_modifyRegister(MCP_RXB1CTRL, MCP_RXB_RX_MASK, MCP_RXB_RX_ANY);
            break;
          // The followingn two functions of the MCP2515 do not work, there is a bug in the silicon.
            case (MCP_STD): 
            mcp2515_modifyRegister(MCP_RXB0CTRL,
            MCP_RXB_RX_MASK | MCP_RXB_BUKT_MASK,
            MCP_RXB_RX_STD | MCP_RXB_BUKT_MASK );
            mcp2515_modifyRegister(MCP_RXB1CTRL, MCP_RXB_RX_MASK,
            MCP_RXB_RX_STD);
            break;

            case (MCP_EXT): 
            mcp2515_modifyRegister(MCP_RXB0CTRL,
            MCP_RXB_RX_MASK | MCP_RXB_BUKT_MASK,
            MCP_RXB_RX_EXT | MCP_RXB_BUKT_MASK );
            mcp2515_modifyRegister(MCP_RXB1CTRL, MCP_RXB_RX_MASK,
            MCP_RXB_RX_EXT);
            break;

            case (MCP_STDEXT): 
            mcp2515_modifyRegister(MCP_RXB0CTRL, MCP_RXB_RX_MASK | MCP_RXB_BUKT_MASK, MCP_RXB_RX_STDEXT | MCP_RXB_BUKT_MASK );
            mcp2515_modifyRegister(MCP_RXB1CTRL, MCP_RXB_RX_MASK, MCP_RXB_RX_STDEXT);
            break;
    
            default:
		#if DEBUG_MODE        
            printf("Setting ID Mode Failure...");
		#endif           
            return MCP2515_FAIL;
            break;
		}    

        res = mcp2515_setCANCTRL_Mode(mcpMode);                                                                
        if(res)
        {
		#if DEBUG_MODE        
        	printf("Returning to Previous Mode Failure...");
		#endif           
          return res;
        }
    }
    return res;
}
